# livewallpaper

./: .all-contributorsrc  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  LiveWallpaper.sln  LiveWallpaper2.sln  README.md  SUMMARY.md  WallpaperTool.sln  multi-language.tsf  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
Browser/: App.xaml  App.xaml.cs  Browser.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
Docs/: Build.md  Contribution.md  README_zh.md  build_enginerender.ps1  build_webrender.ps1
LiveWallpaper/: App.config  App.xaml  App.xaml.cs  AppContext.cs  Bootstrapper.cs  DragManager.cs  LanService.cs  LiveWallpaper.Obsolete.csproj  LiveWallpaper.csproj  NLog.xsd  NativeWindowHandler.cs  Program.cs  README.md  W32.cs  packages.config
LiveWallpaper.App/: LiveWallpaper.App.assets.cache  LiveWallpaper.App.wapproj  LiveWallpaper.App_TemporaryKey.pfx  Package.appxmanifest
LiveWallpaper.LocalServer/: AppManager.cs  HubEventEmitter.cs  ILanService.cs  LanService.cs  LiveWallpaper.LocalServer.csproj  ServerWrapper.cs  Startup.cs
LiveWallpaper.Server/: LiveWallpaper.Server.csproj  LocalServer.cs
LiveWallpaper.Shell/: App.xaml  App.xaml.cs  LiveWallpaper.Shell.csproj  app.manifest
LiveWallpaper.Store/: App.xaml  App.xaml.cs  LiveWallpaper.Store.csproj  LiveWallpaper.Store_TemporaryKey.pfx  Package.StoreAssociation.xml  Package.appxmanifest  _pkginfo.txt
LiveWallpaper.UI/: LiveWallpaper.UI.csproj  MainWindow.xaml  MainWindow.xaml.cs
LiveWallpaperCore/: AppContext.cs  LiveWallpaper.csproj  LiveWallpaperCore.csproj  NLog.config  (+1 more)
LiveWallpaperCore.LocalServer/: AppManager.cs  AppManager.obsolete.cs  HubEventEmitter.cs  LiveWallpaper.LocalServer.csproj  LiveWallpaperCore.LocalServer.csproj  ServerWrapper.cs  Startup.cs  WeatherForecast.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/mpv/: README.md
src-tauri/resources/wallpaper_samples/: README.md
src-tauri/src/: config.rs  main.rs  wallpaper.rs  wallpaper_manager.rs
src-tauri/src/api/: mod.rs  settings.rs  wallpaper.rs
src-tauri/src/render/: mod.rs  mpv_player.rs
src-tauri/src/utils/: desktop.rs  mod.rs  windows.rs
(+1237 files in other folders)
