[package]
authors = ["Giantapp"]
description = "LiveWallpaper3"
edition = "2021"
license = ""
name = "live_wallpaper"
repository = ""
rust-version = "1.57"
version = "3.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.63.0"
tauri-build = {version = "1.2", features = []}
[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.2", features = ["shell-open", "system-tray"]}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
