[package]
authors = ["Giantapp"]
description = "LiveWallpaper3"
edition = "2021"
license = ""
name = "live_wallpaper"
repository = ""
rust-version = "1.57"
version = "3.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }
[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2", features = ["dialog-open", "shell-open", "system-tray", "window-show"] }
tokio = {version = "1.25.0", features = ["full"] }
toml = "0.7"
winsafe = {version = "0", features = ["kernel"] }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
[dependencies.windows]
features = [
  "Data_Xml_Dom",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
]
version = "0.44.0"
[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
]
version = "1.3.0"
